--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,21 +35,21 @@ repository = "https://github.com/docknetwork/crypto"
 [workspace.dependencies]
 ark-ff = { version = "^0.4.1", default-features = false }
 ark-ec = { version = "^0.4.1", default-features = false }
-ark-std = { version = "^0.4.0", default-features = false}
+ark-std = { version = "^0.4.0", default-features = false }
 ark-poly = { version = "^0.4.1", default-features = false }
 ark-serialize = { version = "^0.4.1", default-features = false, features = [ "derive" ] }
 ark-relations = { version = "^0.4.0", default-features = false }
 ark-r1cs-std = { version = "^0.4.0", default-features = false }
 ark-groth16 = { version = "^0.4.0", default-features = false }
-rayon = { version = "1" }
+rayon = { version = "1", default-features = false }
 digest = { version = "0.10", default-features = false, features = ["alloc"] }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_with = { version = "1.10.0", default-features = false, features = ["macros"] }
-zeroize = { version = "1.7.0", features = ["derive"] }
+zeroize = { version = "1.7.0", default-features = false, features = ["derive"] }
 blake2 = { version = "0.10", default-features = false }
 ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
 ark-secp256r1 = { version = "^0.4.0", default-features = false }
-itertools = "0.14.0"
+itertools = { version = "0.14.0", default-features = false }
 sha3 = { version = "0.10.6", default-features = false }
 
 [profile.release]
