--- a/schnorr_pok/Cargo.toml
+++ b/schnorr_pok/Cargo.toml
@@ -13,27 +13,30 @@ doctest = false
 path = "src/lib.rs"
 
 [dependencies]
-ark-serialize.workspace = true
-ark-ff.workspace = true
-ark-ec.workspace = true
-ark-std.workspace = true
-rayon = {workspace = true, optional = true}
-digest.workspace = true
+ark-serialize = { workspace = true, default-features = false }
+ark-ff = { workspace = true, default-features = false }
+ark-ec = { workspace = true, default-features = false }
+ark-std = { workspace = true, default-features = false }
+rayon = { workspace = true, default-features = false, optional = true}
+digest = { workspace = true, default-features = false }
 dock_crypto_utils = { version = "0.22.0", default-features = false, path = "../utils" }
-serde.workspace = true
-serde_with.workspace = true
-zeroize.workspace = true
+serde = { workspace = true, default-features = false }
+serde_with = { workspace = true, default-features = false }
+zeroize = { workspace = true, default-features = false }
 
 [dev-dependencies]
-blake2.workspace = true
-ark-bls12-381.workspace = true
+blake2 = { workspace = true, default-features = false }
+ark-bls12-381 = { workspace = true, default-features = false }
 serde_json = "1.0"
 rmp-serde = "1.0"
 rand_core = "0.6.4"
 
 [features]
-default = [ "parallel" ]
-std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "dock_crypto_utils/std", "serde/std"]
+default = [ "std", "parallel" ]
+
+no_std = [ "zeroize/alloc" ]
+std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "dock_crypto_utils/std", "serde/std", "zeroize/std" ]
+
 print-trace = [ "ark-std/print-trace", "dock_crypto_utils/print-trace" ]
 parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon", "dock_crypto_utils/parallel" ]
 #with-serde = ["serde", "serde_with", "dock_crypto_utils/with-serde"]
