--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -30,6 +30,8 @@ hkdf = { version = "0.12.3", default-features = false}
 sha2 = { version = "0.10.8", default-features = false}
 aead = { version = "0.5.2", default-features = false, features = [ "alloc" ]}
 integer-sqrt = { version = "0.1.5", default-features = false }
+hashbrown = {version = "0.16", default-features = false}
+ahash = { version = "0.8", default-features = false }
 
 [dev-dependencies]
 blake2 = { workspace = true, default-features = false }
