--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -17,6 +17,11 @@ ark-ec = { workspace = true, default-features = false }
 ark-std = { workspace = true, default-features = false }
 ark-poly = { workspace = true, default-features = false }
 ark-serialize = { workspace = true, default-features = false }
+#ark-ff = { version = "^0.5.0", default-features = false }
+#ark-ec = { version = "^0.5.0", default-features = false }
+#ark-std = { version = "^0.5.0", default-features = false }
+#ark-poly = { version = "^0.5.0", default-features = false }
+#ark-serialize = { version = "^0.5.0", default-features = false, features = [ "derive" ] }
 zeroize = { workspace = true, default-features = false }
 digest = { workspace = true, default-features = false }
 serde = { workspace = true, default-features = false, optional = true }
