--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -44,6 +44,7 @@ ark-bls12-381 = { workspace = true, default-features = false }
 chacha20poly1305 = {version = "0.10.1", default-features = false}
 ark-secp256r1 = { workspace = true, default-features = false }
 ark-std = { workspace = true, features = ["getrandom"] }
+ark-pallas = {version = "0.4.0", default-features = false, features = ["curve"]}
 
 [features]
 default = ["std", "parallel", "serde"]
