--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ digest = { version = "0.10", default-features = false, features = ["alloc"] }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_with = { version = "3.14.0", default-features = false, features = ["macros", "alloc"] }
 cfg_eval = { version = "0.1.2", default-features = false }
-zeroize = { version = "1.7.0", default-features = false, features = ["derive"] }
+zeroize = { version = "1.7.0", default-features = false, features = ["derive", "alloc"] }
 blake2 = { version = "0.10", default-features = false }
 ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
 ark-secp256r1 = { version = "^0.4.0", default-features = false }
