--- a/schnorr_pok/Cargo.toml
+++ b/schnorr_pok/Cargo.toml
@@ -49,5 +49,6 @@ default = [ "std", "parallel", "serde" ]
 std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "dock_crypto_utils/std", "serde?/std", "zeroize/std" ]
 
 print-trace = [ "ark-std/print-trace", "dock_crypto_utils/print-trace" ]
-parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon", "dock_crypto_utils/parallel" ]
+parallel = [ "std", "rayon" ]
+parallel_full = [ "parallel", "dock_crypto_utils/parallel_full" ]
 serde = ["dep:serde", "serde_with", "dock_crypto_utils/serde"]
